cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_55.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/ofb64enc.c:37: error: DEAD_STORE
  The value written to &dp (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/ofb64enc.c:37:5: Write of unused value
35.       dp = d;
36.       l2c(v0, dp);
37.       l2c(v1, dp);
          ^
38.       while (l--) {
39.           if (n == 0) {
